--- a/about_us.html
+++ b/about_us.html
@@ -13,7 +13,7 @@
 <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 	
 </head>
-<body>
+<body class="about-us-page">
 	<div class="back-container container-fluid" style="height: 0">
 		<div class="row menu">
 			<div class="logo col-xs-3 col-sm-3 col-md-3 col-lg-3 text-left">
@@ -58,20 +58,58 @@ color: #a992ff;
 		</div>
 		</div>
 		<div class="container-fluid info">
-		<div class="row about-us revealator-slideright revealator-once revealator-duration2">
-			<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 about_us text-center">
+		<div class="row about-us page-us">
+			<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 about_us">
 			<style type="text/css">
 				.about-us{
 					margin-top: 56px;
 				}
 			</style>
-			<h3>О нас</h3>
+			<h3 class="text-center">О нас</h3>
 			<hr>
-			<h4>Мы являемся лидерами Дальневосточного рынка по продаже танк-контейнеров и спецтехники</h4><br>
-				<strong>Группа компаний «Спецтрейд»</strong>, основанная в 2005 году, сегодня является одним из лидеров Дальневосточного рынка торговли, предоставления в аренду и ремонта различных видов тяжёлой техники, включая карьерные экскаваторы, гусеничные краны большой грузоподъемности и другие специальные машины.<br>~<br>
-<strong>Группа компаний «Спецтрейд»</strong>оказывает полный перечень услуг по транспортировке негабарита. Мы осуществляем перевозки как по России, так и в зарубежные страны, а так же обеспечиваем оказание полного перечня логистических услуг, работ по таможенному сопровождению, оформляем разрешительную документацию. Весь перечень наших услуг обеспечивается высококвалифицированными техническими специалистами.<br>~<br>
-<strong>Что бы ни интересовало нашего клиента:</strong> аренда автокрана, покупка бульдозера или карьерного самосвала, транспортировка крупногабаритного груза или приобретение в лизинг фронтального погрузчика – наши специалисты помогут найти наиболее подходящее решение.
-				<hr>
+			<h4 class="text-center">Мы являемся лидерами Дальневосточного рынка по продаже танк-контейнеров и спецтехники</h4><br>
+				<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 block-us">
+				<strong>Группа компаний «Спецтрейд»</strong>, основанная в 2005 году, сегодня является одним из лидеров Дальневосточного рынка торговли, предоставления в аренду и ремонта различных видов тяжёлой техники, включая карьерные экскаваторы, гусеничные краны большой грузоподъемности и другие специальные машины.</div>
+				
+<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 block-us block-problem">
+<strong>Мы оказываем полный перечень услуг</strong> по транспортировке негабарита. Мы осуществляем перевозки как по России, так и в зарубежные страны, а так же обеспечиваем оказание полного перечня логистических услуг, работ по таможенному сопровождению, оформляем разрешительную документацию. Весь перечень наших услуг обеспечивается высококвалифицированными техническими специалистами.</div>
+<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 block-us">
+<strong>Что бы ни интересовало нашего клиента:</strong> аренда автокрана, покупка бульдозера или карьерного самосвала, транспортировка крупногабаритного груза или приобретение в лизинг фронтального погрузчика – наши специалисты помогут найти наиболее подходящее решение.</div>
+<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 block-us small-us">
+<strong>Мы поставляем как новую</strong>, так и бывшую в употреблении технику и оборудование от надёжных и отлично зарекомендовавших себя производителей.</div>
+			
+			</div>
+		</div>
+
+				<div class="row about-uslugi page-uslugi">
+			<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 uslugi">
+			<h3 class="text-center">Услуги</h3><hr>
+			
+			<h4 class="text-center">Мы предоставляем широкий спектр услуг нашим клиентам</h4><br>
+			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 block-uslugi ">
+				<p><i class="fa fa-wrench" aria-hidden="true"></i><br>Сервисное обслуживание</p>
+<strong>Приоритетным для компании</strong> является система сервисного обслуживания. На новую технику предоставляется расширенная гарантия до 3-х лет. Уникальная система обеспечения гарантийных обязательств позволяет выполнять ремонт техники в кратчайшие сроки в любом регионе России.
+			</div>
+			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 block-uslugi ">
+				<p><i class="fa fa-clock-o" aria-hidden="true"></i><br>Аренда техники</p>
+<strong>Компания сдает в аренду</strong> автокраны, бульдозеры, фронтальные погрузчики, экскаваторы, буровые установки, автовышки. Предпочтение отдается организациям, берущим технику в аренду на длительный срок. Работает гибкая система скидок. Ассортимент техники постоянно пополняется.
+			</div>
+			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 block-uslugi ">
+				<p><i class="fa fa-truck" aria-hidden="true"></i><i class="fa fa-train" aria-hidden="true"></i><i class="fa fa-ship" aria-hidden="true"></i><br>Доставка техники и оборудования</p>
+<strong>Компанией осуществляется транспортирвка</strong> техники и оборудования в адрес покупателя собственным транспортом или сторонними службами. Доставка может осуществляться автомобильным транспортом, железнодорожным транспортом, морским транспортом, своим ходом.
+			</div>
+			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 block-uslugi ">
+				<p><i class="fa fa-usd" aria-hidden="true"></i><i class="fa fa-usd" aria-hidden="true"></i><i class="fa fa-usd" aria-hidden="true"></i><br>Финансовые услуги</p>
+<strong>На сегодняшний день,</strong> компания имеет тесные деловые связи с несколькими крупными организациями по предоставлению финансового кредитования и лизинга, что позволяет получить лояльные схемы приобретения дорогостоящей продукции.
+			</div>
+			<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 block-uslugi ">
+				<p><i class="fa fa-file-text" aria-hidden="true"></i><br>Оформление разрешительной документации</p>
+<strong>Компания производит</strong> оформление экспертизы промышленной безопасности, разрешения на применение Федеральной службы по экологическому, технологическому и атомному надзору, а так же, сертификатов соответствия на поставляемую технику и оборудование.
+			</div>
+			<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 block-uslugi ">
+				<p><i class="fa fa-shopping-cart" aria-hidden="true"></i><br>Комиссионная продажа техники</p>
+<strong>Компания принимает на комиссионную продажу</strong> и продает технику и оборудование. Выгодные условия, минимальная комиссия.
+			</div>
 			</div>
 		</div>
 	</div>
@@ -84,13 +122,18 @@ color: #a992ff;
 var click = 0;
 function burger(){
 	if (click==0) {
-	$('#adaptive-menu-lines').show('drop');
+	$('#adaptive-menu-lines').fadeIn('fast');
 	click = 1;
 }else{
-	$('#adaptive-menu-lines').hide('drop');
+	$('#adaptive-menu-lines').fadeOut('fast');
 	click = 0;
 }
 }
 </script>
+<!-- HelloPreload http://hello-site.ru/preloader/ -->
+<style type="text/css">#hellopreloader>p{display:none;}#hellopreloader_preload{display: block;position: fixed;z-index: 99999;top: 0;left: 0;width: 100%;height: 100%;background: rgb(11,35,105) url(http://hello-site.ru//main/images/preloads/oval.svg) center center no-repeat;background-size:105px;}</style>
+<div id="hellopreloader"><div id="hellopreloader_preload"></div><p><a href="http://hello-site.ru">Hello-Site.ru. Бесплатный конструктор сайтов.</a></p></div>
+<script type="text/javascript">var hellopreloader = document.getElementById("hellopreloader_preload");function fadeOutnojquery(el){el.style.opacity = 1;var interhellopreloader = setInterval(function(){el.style.opacity = el.style.opacity - 0.05;if (el.style.opacity <=0.05){ clearInterval(interhellopreloader);hellopreloader.style.display = "none";}},16);}window.onload = function(){setTimeout(function(){fadeOutnojquery(hellopreloader);},1000);};</script>
+<!-- HelloPreload http://hello-site.ru/preloader/ -->
 </body>
 </html>
